# game_of_life

./: README.md
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  game_of_life
src/: CMakeLists.txt  grid.c  grid.h  life.c  life.h  main.c
